fixed login dialog so the buttons are visible on zooms

--- a/Angular/src/app/login-dialog/login-dialog.component.css
+++ b/Angular/src/app/login-dialog/login-dialog.component.css
@@ -1,3 +1,10 @@
+@viewport {
+    width: 980px;
+    min-zoom: 0.25;
+    max-zoom: 5;
+    orientation: landscape;
+}
+
 .login {
     font-size: 48px;
     font-family: 'IBM Plex Sans', sans-serif;
